fix: сверстать like-button через тег <button>, добавить text-overflow

--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,9 +1,12 @@
 .element__like-button {
     background-image: url("../../../images/like-button.svg");
     background-repeat: no-repeat;
-    background-size: 22px 19px;
-    display: inline-block;
-    width: 22px;
-    height: 19px;
-    transform: translate(0, 25%);
+    background-size: contain;
+    min-width: 22px;
+    min-height: 19px;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    padding: 0;
 }
